dataset1235/2025-2/2868285114/users/2008605748/executions/3649835072_48684178.log
== RUN (2025-08-24 00:33:04)
-- CODE: 
total_vendas = float(input())
lucro = total_vendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 00:33:05)
-- CODE: 
total_vendas = float(input())
lucro = total_vendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:18:45)
-- CODE: 
total_vendas = float(input())
lucro = total_vendas * (30/100)
print(round(lucro, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 3
    print(round(lucro, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:19:01)
-- CODE: 
total_vendas = float(input())
lucro = total_vendas * (30/100)
print(round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 00:32:26)
-- CODE: 
total_vendas = float(input())
lucro = total_vendas * (30/100)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
